--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="styles.css"/>
 </head>
 <body>
+    <img src="image.jpg" alt="image of the side of a building">
     
 </body>
 </html>
