--- a/index.html
+++ b/index.html
@@ -9,5 +9,9 @@
 <body>
     <img src="image.jpg" alt="image of the side of a building">
     
+    <form action="#">
+        <label for="first_name">First Name</label>
+        <input type="text" id="first_name" name="first_name">
+    </form>
 </body>
 </html>
