--- a/index.html
+++ b/index.html
@@ -10,8 +10,18 @@
     <img src="image.jpg" alt="image of the side of a building">
     
     <form action="#">
-        <label for="first_name">First Name</label>
-        <input type="text" id="first_name" name="first_name">
+        <div id="first_row">
+            <label for="first_name">First Name</label>
+            <input type="text" id="first_name" name="first_name">
+            <label for="last_name">Last Name</label>
+            <input type="text" id="last_name" name="last_name">
+        </div>
+        <div id="second_row">
+            <label for="password">Password</label>
+            <input type="text" id="password" name="password">
+            <label for="confirm_password">Confirm Password</label>
+            <input type="text" id="confirm_password" name="confirm_password">
+        </div>
     </form>
 </body>
 </html>
