Add the third row of the form

--- a/index.html
+++ b/index.html
@@ -17,6 +17,12 @@
             <input type="text" id="last_name" name="last_name">
         </div>
         <div id="second_row">
+            <label for="email">Email</label>
+            <input type="text" id="email" name="email">
+            <label for="phone">Phone Number</label>
+            <input type="text" id="phone" name="phone">
+        </div>
+        <div id="third_row">
             <label for="password">Password</label>
             <input type="text" id="password" name="password">
             <label for="confirm_password">Confirm Password</label>
