--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <img src="image.jpg" alt="image of the side of a building">
+    <p>Photo by Lexi Laginess on Unsplash</p>
     
     <form action="#">
         <div id="first_row">
@@ -18,16 +19,19 @@
         </div>
         <div id="second_row">
             <label for="email">Email</label>
-            <input type="text" id="email" name="email">
+            <input type="email" id="email" name="email">
             <label for="phone">Phone Number</label>
-            <input type="text" id="phone" name="phone">
+            <input type="tel" id="phone" name="phone">
         </div>
         <div id="third_row">
             <label for="password">Password</label>
-            <input type="text" id="password" name="password">
+            <input type="password" id="password" name="password">
             <label for="confirm_password">Confirm Password</label>
-            <input type="text" id="confirm_password" name="confirm_password">
+            <input type="password" id="confirm_password" name="confirm_password">
         </div>
+        <button type="submit">Create Account</button>
     </form>
+
+    
 </body>
 </html>
